generic sorting function

--- a/animalbase.html
+++ b/animalbase.html
@@ -41,6 +41,6 @@
       </tr>
     </template>
 
-    <script src="animalbase2.js"></script>
+    <script src="animalbase.js"></script>
   </body>
 </html>
